# mcp-email-server

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  codecov.yaml  mkdocs.yml  pyproject.toml  pytest.ini  smithery.yaml  tox.ini
.github/workflows/: main.yml  on-release-main.yml
dev/: claude_desktop_config.json  install_claude_desktop.py
docs/: index.md  modules.md
mcp_email_server/: app.py  cli.py  config.py  log.py  logger.py  ui.py
mcp_email_server/emails/: __init__.py  classic.py  dispatcher.py  models.py
mcp_email_server/tools/: claude_desktop_config.json  installer.py
tests/: conftest.py  test_classic_handler.py  test_config.py  test_dispatcher.py  test_email_client.py  test_env_config_coverage.py  test_foo.py  test_mcp_tools.py  test_models.py
